# aligned_layer

./: Makefile  README.md  docker-compose-build.yaml  docker-compose.yml  go.mod  go.sum
.github/workflows/: build-and-publish.yaml  integration-tests.yml
aggregator/: aggregator.go  aggregator_test.go  rpc_server.go  rpc_server_test.go
aggregator/cmd/: main.go
aggregator/mocks/: chain.go
aggregator/types/: types.go
cli/: main.go
cli/actions/: deposit_into_strategy.go  print_operator_status.go  register_operator_pubkeys.go  register_operator_with_avs.go  register_operator_with_eigenlayer.go
common/: shared_types.go
common/abis/: IncredibleSquaringTaskManager.json
config-files/: aggregator.yaml
contracts/: generate-go-bindings.sh
contracts/script/: AlignedLayerDeployer.s.sol
contracts/src/: AlignedLayerServiceManager.sol  AlignedLayerTaskManager.sol  IAlignedLayerTaskManager.sol  IIncredibleSquaringTaskManager.sol  IncredibleSquaringTaskManager.sol
contracts/test/: CredibleSquaringTaskManager.t.sol
core/: utils.go
core/chainio/: avs_reader.go  avs_subscriber.go  avs_writer.go  bindings.go
core/config/: config.go
docs/: README.md  SUMMARY.md
docs/about_aligned/: learning_resources.md  (+3 more)
metrics/: metrics.go
operator/: operator.go  operator_test.go  registration_test.go  rpc_client.go
operator/kimchi/lib/: .gitignore  Cargo.toml  kimchi_ec_add.proof
operator/kimchi/lib/src/: lib.rs
operator/kimchi/lib/src/ec_add_proof_generator/: main.rs
operator/kimchi/lib/src/proof_generator/: main.rs
task_generator/: main.go  task_generator.go
(+40 files in other folders)
